tests/e2e/when_invalid_action4.story
a = gmaps geocode address: "Venice"
when a listen path: "/" as r
    r write content: "foobar"
